--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/style.css" /> -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -12,6 +12,12 @@
     ></script>
   </head>
   <body>
+    <div>
+      <form>
+        <input type = "text" id = "VIN">
+        <button id = "submit">Submit</button>
+      </form>
+    </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
