--- a/form.html
+++ b/form.html
@@ -22,6 +22,7 @@
             <button id="submit" type="submit">Submit</button>
         </form>
     </div>
+    <!--hide() and show()-->
     <div id="VIN">
     <h1>Showing results for <span id="type">vehicle type</span></h1>
         <img>  </img>
