--- a/index.html
+++ b/index.html
@@ -18,6 +18,47 @@
         <button id = "submit">Submit</button>
       </form>
     </div>
+
+  <div>
+    <header>
+     <h1>VINformation</h1>
+      </header>
+  </div>
+
+    <div class="car-info">
+    <div class="car-info">
+    <h2>Make</h2>
+    <p>Info corresponding to make.</p>
+    </div>
+    <div class="car-info">
+    <h2>Model</h2>
+     <p> Info corresponding to model.</p>
+    </div>
+    <div class="car-info">
+    <h2>Drive Type</h2>
+    <p> Info corresponding to drive type.</p>
+     </div>
+    <div class="car-info">
+    <h2>Fuel Type</h2>
+    <p>Info corresponding to fuel type.</p>
+    </div>
+     <div class="car-info">
+     <h2>Engine Cylinders</h2>
+     <p>Info corresponding to engine cylinders.</p>
+     </div>
+     <div class="car-info">
+     <h2>Engine Horsepower</h2>
+     <p>Info corresponding to engine horsepower. </p>
+     </div>
+   <div class="car-info">
+    <h2>Top Speed</h2>
+    <p> Info corresponding to top speed.</p>
+     </div>
+     <div class="car-info">
+     <h2>Vehicle Type</h2>
+    <p>Info corresponding to vehicle type.</p>
+    </div>
+  </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
