--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
     <!--hide() and show()-->
     <div id="VIN">
     <h1>Showing results for <span id="type">vehicle type</span></h1>
-        <img>  </img>
+        <img id= "vehicle-image" alt="vehicle image"> 
          <h2>vVehicle Model   </h2>
            <p id="model"> </p>
          <h2>Model year</h2> 
@@ -56,6 +56,6 @@
          <p id="vehicle-type"></p>
 
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
