--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> VIN Formation</title>
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/style.css" /> -->
+     <link rel="stylesheet" type="text/css" href="style.css" /> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
     <script
@@ -26,7 +26,7 @@
     <div id="VIN">
     <h1>Showing results for <span id="type">vehicle type</span></h1>
         <img id= "vehicle-image" alt="vehicle image"> 
-         <h2>vVehicle Model   </h2>
+         <h2>Vehicle Model   </h2>
            <p id="model"> </p>
          <h2>Model year</h2> 
          <p id="model-year"> </p> 
