--- a/form.html
+++ b/form.html
@@ -26,7 +26,8 @@
     <div id="VIN">
     <h1>Showing results for <span id="type">vehicle type</span></h1>
         <img id= "vehicle-image" alt="vehicle image"> 
-         <h2>Vehicle Model   </h2>
+         <div id ="info">
+        <h2>Vehicle Model   </h2>
            <p id="model"> </p>
          <h2>Model year</h2> 
          <p id="model-year"> </p> 
@@ -54,7 +55,7 @@
          <p id="top-speed"></p>
          <h2>Vehicle Type</h2>
          <p id="vehicle-type"></p>
-
+         </div>
     </div>
     <script src="script.js"></script>
   </body>
