changed js script path

--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
     <h1>Showing results for <span id="type">vehicle type</span></h1>
         <img id= "vehicle-image" alt="vehicle image"> 
          <h2>vVehicle Model   </h2>
-           <p id="model"> </p>
+          <p id="model"> </p>
          <h2>Model year</h2> 
          <p id="model-year"> </p> 
          <h2> Make</h2>
@@ -56,6 +56,6 @@
          <p id="vehicle-type"></p>
 
     </div>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script> 
   </body>
 </html>
