--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> VIN Formation</title>
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/style.css" /> -->
+     <link rel="stylesheet" type="text/css" href="style.css" /> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
     <script
@@ -26,8 +26,9 @@
     <div id="VIN">
     <h1>Showing results for <span id="type">vehicle type</span></h1>
         <img id= "vehicle-image" alt="vehicle image"> 
-         <h2>vVehicle Model   </h2>
-          <p id="model"> </p>
+         <div id ="info">
+        <h2>Vehicle Model   </h2>
+           <p id="model"> </p>
          <h2>Model year</h2> 
          <p id="model-year"> </p> 
          <h2> Make</h2>
@@ -54,8 +55,8 @@
          <p id="top-speed"></p>
          <h2>Vehicle Type</h2>
          <p id="vehicle-type"></p>
-
+         </div>
     </div>
-    <script src="assets/js/script.js"></script> 
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
