--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> VIN Formation</title>
-     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" /> 
+     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" /> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
     <script
@@ -57,6 +57,6 @@
          <p id="vehicle-type"></p>
          </div>
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
