added div to center

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
     ></script>
   </head>
   <body>
-      
+    <div class ="center-align">
     <div class="content">
         <form id="search-form" class="form">
             <h1>VIN Formation</h1>
@@ -57,6 +57,7 @@
          <p id="vehicle-type"></p>
          </div>
     </div>
+  </div>
     <script src="script.js"></script>
   </body>
 </html>
