--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> VIN Formation</title>
      <link rel="stylesheet" type="text/css" href="./assets/css/style.css" /> 
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
     <script
@@ -13,15 +14,13 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-      
-    <div class="content">
-        <form id="search-form" class="form">
-            <h1>VIN Formation</h1>
-            <input type="text" id="input" placeholder="please enter VIN number" name="VIN" maxlength="100"/>
-            <button id="submit" type="submit">Submit</button>
-        </form>
+
+  <!-- <header>
+    <div>
+      <h1>Clayton's Big Rigs</h1>
     </div>
+  </header> -->
+  <body>
     <!--hide() and show()-->
     <div id="VIN">
     <h1>Showing results for <span id="type">vehicle type</span></h1>
@@ -57,6 +56,13 @@
          <p id="vehicle-type"></p>
          </div>
     </div>
+    <div class="content">
+      <form id="search-form" class="form">
+          <h1>VIN Formation</h1>
+          <input type="text" id="input" placeholder="please enter VIN number" name="VIN" maxlength="100"/>
+          <button id="submit" type="submit">Submit</button>
+      </form>
+  </div>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
