--- a/formDemo.html
+++ b/formDemo.html
@@ -35,33 +35,59 @@
   </div>      
     <!--hide() and show()-->
     <div id="VIN">
+      <section class="card">
       <h2>Results for <span id="type">vehicle type</span></h2>
       <img id= "vehicle-image" alt="vehicle image"> 
+      </section>
       <div id ="info">
+        <section class="card">
         <h2>Vehicle Model   </h2>
         <p id="model"> </p>
+        </section>
+        <section class="card">
         <h2>Model year</h2> 
         <p id="model-year"> </p> 
+        </section>
+        <section class="card">
         <h2> Make</h2>
         <p id="make"> </p>
+        </section>
+        <section class="card">
         <h2> User VIN</h2>
         <p id="user-vin"></p>
+        </section>
+        <section class="card">
         <h2> Drive type</h2>
         <p id="drive-type"></p>
+        </section>
+        <section class="card">
         <h2> Fuel Type</h2>
         <p id="fuel type"></p>
+        </section>
+        <section class="card">
         <h2>Engine Cylinders</h2>
         <p id="cylinder"></p>
+        </section>
+        <section class="card">
         <h2>Engine HP</h2>
         <p id=engine-hp></p>
+        </section>
+        <section class="card">
         <h2>Seats</h2>
         <p id="seats"> </p>
+        </section>
+        <section class="card">
         <h2>Seat Rows</h2>
         <p id="rows"></p>
+        </section>
+        <section class="card">
         <h2>Top Speed</h2>
         <p id="top-speed"></p>
+        </section>
+        <section class="card">
         <h2>Vehicle Type</h2>
         <p id="vehicle-type"></p>
+        </section>
       </div>
       <div id = "errors">
         <h2>Error Code</h2>
