--- a/formDemo.html
+++ b/formDemo.html
@@ -37,7 +37,7 @@
     <div id="VIN" class="row">
       <h4>Results for <span id="type">vehicle type</span></h4>
       <img id= "vehicle-image" alt="vehicle image" class="col 12 offset-12"> 
-      <div id ="info" class="card-panel col 6 " >
+      <div id ="info" class="card-panel" >
         <!-- #33691e light-green darken-4 -->
         <h5>Vehicle Model   </h5>
         <p id="model"> </p>
