--- a/form.html
+++ b/form.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> VIN Formation</title>
-     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" /> 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <title> VINformation</title>
+     <link rel="stylesheet" type="text/css" href="style.css" /> 
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
     rel="stylesheet" />
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"  ></script>
   </head>
 
   <!-- <header>
@@ -21,50 +20,73 @@
     </div>
   </header> -->
   <body>
-    <!--hide() and show()-->
-    <div id="VIN">
-      <h1>Showing results for <span id="type">vehicle type</span></h1>
-      <img id= "vehicle-image" alt="vehicle image"> 
-      <div id ="info">
-        <h2>Vehicle Model   </h2>
-        <p id="model"> </p>
-        <h2>Model year</h2> 
-        <p id="model-year"> </p> 
-        <h2> Make</h2>
-        <p id="make"> </p>
-        <h2> User VIN</h2>
-        <p id="user-vin"></p>
-        <h2> Drive type</h2>
-        <p id="drive-type"></p>
-        <h2> Fuel Type</h2>
-        <p id="fuel type"></p>
-        <h2>Engine Cylinders</h2>
-        <p id="cylinder"></p>
-        <h2>Engine HP</h2>
-        <p id=engine-hp></p>
-        <h2>Seats</h2>
-        <p id="seats"> </p>
-        <h2>Seat Rows</h2>
-        <p id="rows"></p>
-        <h2>Top Speed</h2>
-        <p id="top-speed"></p>
-        <h2>Vehicle Type</h2>
-        <p id="vehicle-type"></p>
+    <nav>
+      <div class="nav-wrapper ">
+        <a href="#" class="brand-logo">VINformation</a>
       </div>
-      <div id = "errors">
-        <h2>Error Code</h2>
-        <p id="error-code"></p>
-        <h2>Error Text</h2>
-        <p id="error-text"></p>
-      </div>
-    </div>
+    </nav>
+    <br>
     <div class="content">
       <form id="search-form" class="form">
-          <h1>VIN Formation</h1>
+          <h3>VINformation</h3>
           <input type="text" id="input" placeholder="please enter VIN number" name="VIN" maxlength="100"/>
           <button id="submit" type="submit">Submit</button>
       </form>
-  </div>
-    <script src="./assets/js/script.js"></script>
+    </div>      
+    <!--hide() and show()-->
+    <div id="VIN" class="row">
+      <h4>Showing results for <span id="type">vehicle type</span></h4>
+      
+      <div id ="info" class="card-panel col s3 offset-s2" >
+        <!-- #33691e light-green darken-4 -->
+        <h5>Vehicle Model   </h5>
+        <p id="model"> </p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Model year</h5> 
+        <p id="model-year"> </p>
+        <div class="divider #fff8e1 amber lighten-5"></div> 
+        <h5> Make</h5>
+        <p id="make"> </p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5> User VIN</h5>
+        <p id="user-vin"></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5> Drive type</h5>
+        <p id="drive-type"></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5> Fuel Type</h5>
+        <p id="fuel type"></p>
+        <!-- new div here -->
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Engine Cylinders</h5>
+        <p id="cylinder"></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Engine HP</h5>
+        <p id=engine-hp></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Seats</h5>
+        <p id="seats"> </p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Seat Rows</h5>
+        <p id="rows"></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Top Speed</h5>
+        <p id="top-speed"></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Vehicle Type</h5>
+        <p id="vehicle-type"></p>
+       </div>
+      <div class = "col s2 offset-s2"> <img id= "vehicle-image" alt="vehicle image" > </div>
+    <div class="row">
+      <div id = "errors" class="card-panel col s12">
+        <h5>Error Code</h5>
+        <p id="error-code"></p>
+        <div class="divider #fff8e1 amber lighten-5"></div>
+        <h5>Error Text</h5>
+        <p id="error-text"></p>
+      </div>
+    </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
